--- a/Maket/index.html
+++ b/Maket/index.html
@@ -14,7 +14,7 @@
 <body>
    <div class="top">
       <div class="top-header">
-         <a href="#"><img src="images/Logo.svg" alt="Логотип"></a>
+         <a href="#"><img src="images/Logo.png" alt="Логотип"></a>
          <div class="top-link">
             <a class="header-link" href="#">Home</a>
             <a class="header-link" href="#">About US</a>
@@ -35,32 +35,32 @@
                <a class="button-video" href="#">Watch Video</a>
             </div>
          </div>
-         <img src="images/top-photo.svg" alt="top photo">
+         <img src="images/top-photo.png" alt="top photo">
       </div>
    </div>
    <div class="blok-logos">
-      <img class="logo" src="images/1.svg" alt="logo 1">
-      <img class="logo" src="images/2.svg" alt="logo 2">
-      <img class="logo" src="images/3.svg" alt="logo 3">
-      <img class="logo" src="images/4.svg" alt="logo 4">
-      <img class="logo" src="images/5.svg" alt="logo 5">
-      <img class="logo" src="images/6.svg" alt="logo 6">
+      <img class="logo" src="images/1.png" alt="logo 1">
+      <img class="logo" src="images/2.png" alt="logo 2">
+      <img class="logo" src="images/3.png" alt="logo 3">
+      <img class="logo" src="images/4.png" alt="logo 4">
+      <img class="logo" src="images/5.png" alt="logo 5">
+      <img class="logo" src="images/6.png" alt="logo 6">
    </div>
    <div class="item-top">
       <div class="item item-shadow">
-         <img src="images/item1.svg" alt="item 1">
+         <img src="images/ietem1..png" alt="item 1">
          <h3 class="item-title">Grow Your Business</h3>
          <p class="item-top-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
          <a href="#" class="button-top-item">Read More...</a>
       </div>
       <div class="item item-shadow">
-         <img src="images/item2.svg" alt="item 2">
+         <img src="images/ietem2..png" alt="item 2">
          <h3 class="item-title">Get Quality Ieads</h3>
          <p class="item-top-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
          <a href="#" class="button-top-item">Read More...</a>
       </div>
       <div class="item item-shadow">
-         <img src="images/item3.svg" alt="item 3">
+         <img src="images/ietem3..png" alt="item 3">
          <h3 class="item-title">Drive More Sales</h3>
          <p class="item-top-text">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
          <a href="#" class="button-top-item">Read More...</a>
@@ -74,28 +74,28 @@
       </div>
       <div class="content-item-blok">
          <div class="content-item item-content-shadow">
-            <img src="images/item4.svg" alt="item 4">
+            <img src="images/ietem4..png" alt="item 4">
             <h3 class="item-title">Keyword Research</h3>
             <p class="item-text">Business applications through revolutionary catalysts for chang the Seamlessly
                underwhelm
                dures.</p>
-            <button class="button button-item">Learn More<img src="images/icon-button.svg" alt=""></button>
+            <button class="button button-item">Learn More<img src="images/icon-button.png" alt=""></button>
          </div>
          <div class="content-item item-content-shadow">
-            <img src="images/item5.svg" alt="item 5">
+            <img src="images/ietem5..png" alt="item 5">
             <h3 class="item-title">Seo Optimazadion</h3>
             <p class="item-text">Business applications through revolutionary catalysts for chang the Seamlessly
                underwhelm
                dures.</p>
-            <button class="button button-item">Learn More<img src="images/icon-button.svg" alt=""></button>
+            <button class="button button-item">Learn More<img src="images/icon-button.png" alt=""></button>
          </div>
          <div class="content-item item-content-shadow">
-            <img src="images/item6.svg" alt="item 6">
+            <img src="images/item6..png" alt="item 6">
             <h3 class="item-title">Social Marketing</h3>
             <p class="item-text">Business applications through revolutionary catalysts for chang the Seamlessly
                underwhelm
                dures.</p>
-            <button class="button button-item">Learn More<img src="images/icon-button.svg" alt=""></button>
+            <button class="button button-item">Learn More<img src="images/icon-button.png" alt=""></button>
          </div>
       </div>
    </div>
